- Improved: New icon theme, based on fugue icons (http://p.yusukekamiyamane.com/) (Ticket #422)
- Improved: Deleting orders when deleting old carts
- Improved: Ignore quotes when sorting products (Ticket #77)
- Improved: Auto-set fallback checkbox if there is no fallback store config (Ticket #458)
- Improved: Renamed attributes for frontend & backend filter, sorting and limit fields
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Fixed enter key trapping on checkout payment method
- Removed pre-0.1 update code from runonce.php
- Removed postsale_mail from Paypal and Postfinance
- Removed obsolete table tl_payment_options
- Removed obsolete table tl_filter_values_to_categories
- Removed moduleOperations callback from payment and shipping modules. The same can be achieved through standard DCA operations.

Version 0.2.10 (2011-06-??)
------------------------------
- Added support for Contao 2.10 "structure" event (see http://dev.contao.org/issues/2504)
- Added shipping & payment method filter to orders
- Added: includeBlankOption=true for select options using foreignKey (Ticket #292)

Version 0.2.9 (2011-05-23)
------------------------------
- Improved: Show disabled shipping and payment modules on frontend preview
- Improved Postfinance payment module with new authentication method (Ticket #235)
- Improved: Only add href_reader if field is available in product collection items table (Ticket #453)
- Fixed bug when products have no SKU
- Fixed product rules bug with member limits (Ticket #409)
- Fixed specialchars in image gallery and checkout steps (Ticket #426)
- Fixed issue when product alias starts with a digit (Ticket #452)
- Fixed empty option value ##cart_text## (Ticket #418)

Version 0.2.8 (2011-05-09)
------------------------------
- Added import/export option for mail templates
- Added quantity_requested to product template
- Added support for conditionalselect as conditionField