@@ -64,6 +64,7 @@ Version 0.3.beta1
 - Improved: Ignore quotes when sorting products (Ticket #77)
 - Improved: Auto-set fallback checkbox if there is no fallback store config (Ticket #458)
 - Improved: Renamed attributes for frontend & backend filter, sorting and limit fields
+- Improved: Removed styles from address book. Added class for default billing/shipping address (Ticket #207)
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Fixed enter key trapping on checkout payment method
